objects/Package_Data__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Package_Comments__c</fullName>
        <inlineHelpText>Provide the Additional Package Comments details</inlineHelpText>
        <label>Additional Package Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_description_for_other_package__c</fullName>
        <label>Additional description for other package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_technical_factors_to_consider__c</fullName>
        <inlineHelpText>Provide the Additional technical factors to consider</inlineHelpText>
        <label>Additional technical factors to consider</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alloy_pn__c</fullName>
        <inlineHelpText>C4 solder name/alloy PN/particle emission rate – Alloy pn</inlineHelpText>
        <label>Alloy pn</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGA_ball_material__c</fullName>
        <label>BGA ball material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGA_surface_finish__c</fullName>
        <inlineHelpText>Select the BGA surface finish</inlineHelpText>
        <label>BGA surface finish</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CuOSP</fullName>
                </value>
                <value>
                    <fullName>CuOSP plus Solder</fullName>
                </value>
                <value>
                    <fullName>CuOSP plus SAC Solder</fullName>
                </value>
                <value>
                    <fullName>SAC Solder</fullName>
                </value>
                <value>
                    <fullName>Solder screen</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSM_surface_finish__c</fullName>
        <label>BSM surface finish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_up_material__c</fullName>
        <inlineHelpText>Select the Build-up material</inlineHelpText>
        <label>Build-up material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GX13</fullName>
                </value>
                <value>
                    <fullName>GZ41</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Build_up_minimum_line_space_um__c</fullName>
        <inlineHelpText>Provide the Build-up minimum line space (um) details</inlineHelpText>
        <label>Build-up minimum line space (um)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Build_up_minimum_line_width_um__c</fullName>
        <inlineHelpText>Provide the Build-up minimum line width (um)</inlineHelpText>
        <label>Build-up minimum line width (um)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4_pad_size_on_package_um__c</fullName>
        <inlineHelpText>Provide the C4 pad size on package (um) details</inlineHelpText>
        <label>C4 pad size on package (um)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C4_solder_name_alloyPN_particle_emission__c</fullName>
        <inlineHelpText>C4 solder name/alloy PN/particle emission rate – c4 solder name</inlineHelpText>
        <label>C4 solder name/alloyPN/particle emission</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chip_and_wiring_details_e_g_wiring_co__c</fullName>
        <inlineHelpText>Provide the Chip and wiring details (e.g./ wiring co details</inlineHelpText>
        <label>Chip and wiring details (e.g./ wiring co</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chip_carrier_Client_new_or_respin__c</fullName>
        <inlineHelpText>Chip carrier (Client new or respin) or TV:</inlineHelpText>
        <label>Chip carrier (Client new or respin)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chip_carrier_PN__c</fullName>
        <inlineHelpText>Enter the Chip carrier PN</inlineHelpText>
        <label>Chip carrier PN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chip_carrier_name__c</fullName>
        <label>Chip carrier name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chip_carrier_physical_outline_drawing_nu__c</fullName>
        <inlineHelpText>Provide the Chip carrier physical outline drawing nudetails</inlineHelpText>
        <label>Chip carrier physical outline drawing nu</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chip_carrier_type__c</fullName>
        <inlineHelpText>Select the Chip carrier type</inlineHelpText>
        <label>*Chip carrier type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FC-PBGA (organic)</fullName>
                </value>
                <value>
                    <fullName>Dark Alumina (ceramic)</fullName>
                </value>
                <value>
                    <fullName>HPGC (High Perf Glass Ceramic)</fullName>
                </value>
                <value>
                    <fullName>Wirebond (organic)</fullName>
                </value>
                <value>
                    <fullName>White Alumina (ceramic)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>FAE</fullName>
                </value>
                <value>
                    <fullName>High Performance PTFE (Hyper BGA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chip_to_package_interconnect_type__c</fullName>
        <inlineHelpText>Provide the Chip to package interconnect type</inlineHelpText>
        <label>Chip to package interconnect type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Line_Space_um__c</fullName>
        <inlineHelpText>Core Line Space (um) details</inlineHelpText>
        <label>Core Line Space (um)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Line_Width_um__c</fullName>
        <inlineHelpText>Core Line Width (um) details</inlineHelpText>
        <label>Core Line Width (um)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_material_set__c</fullName>
        <inlineHelpText>Select the Core material set</inlineHelpText>
        <label>Core material set</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>E679FG</fullName>
                </value>
                <value>
                    <fullName>High Tg SG FR4</fullName>
                </value>
                <value>
                    <fullName>R1515A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_thickness_um__c</fullName>
        <inlineHelpText>Select the Core thickness (um)</inlineHelpText>
        <label>Core thickness (um)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>842</fullName>
                </value>
                <value>
                    <fullName>854</fullName>
                </value>
                <value>
                    <fullName>926</fullName>
                </value>
                <value>
                    <fullName>932</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decap_surface_finish__c</fullName>
        <label>Decap surface finish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Does_this_use_an_existing_chip_carrier__c</fullName>
        <inlineHelpText>Does this use an existing chip carrier required</inlineHelpText>
        <label>Does this use an existing chip carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drilled_via_diameter__c</fullName>
        <inlineHelpText>Provide the Drilled via diameter details</inlineHelpText>
        <label>Drilled via diameter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FCA_pad_type__c</fullName>
        <inlineHelpText>Select the FCA pad type</inlineHelpText>
        <label>FCA pad type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NSMD (non solder mask defined)</fullName>
                </value>
                <value>
                    <fullName>SMD (solder lask define)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCA_surface_finish__c</fullName>
        <inlineHelpText>Select the FCA surface finish</inlineHelpText>
        <label>FCA surface finish</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CuOSP+ Eutectic solder</fullName>
                </value>
                <value>
                    <fullName>CuOSP+ SAC solder</fullName>
                </value>
                <value>
                    <fullName>Solder screen</fullName>
                </value>
                <value>
                    <fullName>Solder inject</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Tech_Review_Comment_if_any__c</fullName>
        <label>General &amp; Tech. Review Comment if any</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBM_name_of_package__c</fullName>
        <inlineHelpText>Enter the GF Name of package Name</inlineHelpText>
        <label>GF Name of package</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IP_request_for_package_Tuc_C__c</fullName>
        <label>IP request # for package Tuc C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_BGA_surface_finish_is_Other_specify__c</fullName>
        <inlineHelpText>If BGA surface finish is &apos;Other&apos;,specify details</inlineHelpText>
        <label>If BGA surface finish is &apos;Other&apos;,specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_FCA_surface_finish_is_Other_specify__c</fullName>
        <inlineHelpText>If FCA surface finish is &quot;Other,specify details</inlineHelpText>
        <label>If FCA surface finish is &quot;Other,specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Other_then_specify__c</fullName>
        <inlineHelpText>If &quot;Other&quot; then, specify details</inlineHelpText>
        <label>If &quot;Other&quot; then, specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_chip_carrier_type_is_Other_please__c</fullName>
        <inlineHelpText>If chip carrier type is &apos;Other&apos;, please details</inlineHelpText>
        <label>If chip carrier type is &apos;Other&apos;, please</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_core_material_set_is_Other_specify__c</fullName>
        <inlineHelpText>If core material set is Other, specify details</inlineHelpText>
        <label>If core material set is Other, specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_core_thickness_none_of_above_specify__c</fullName>
        <inlineHelpText>If core thickness none of above, specify details</inlineHelpText>
        <label>If core thickness none of above, specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_not_qualified_please_specify_the_pac__c</fullName>
        <inlineHelpText>If not qualified, please specify the pac details</inlineHelpText>
        <label>If not qualified, please specify the pac</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_please_add_name__c</fullName>
        <label>If other, please add name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_procured_chip_carrier__c</fullName>
        <inlineHelpText>If procured chip carrier, procured by Amkor or BMT or Other?</inlineHelpText>
        <label>If procured chip carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_BSM_footprint_custom__c</fullName>
        <inlineHelpText>Is BSM footprint custom required</inlineHelpText>
        <label>Is BSM footprint custom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Deliverable_Type__c</fullName>
        <inlineHelpText>Is Deliverable Type  required</inlineHelpText>
        <label>Is Deliverable Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_etch_back_required__c</fullName>
        <inlineHelpText>Is etch-back required</inlineHelpText>
        <label>Is etch-back required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_package_available_in_MD_Parts_menu__c</fullName>
        <inlineHelpText>Is package available in MD Parts menu?  required</inlineHelpText>
        <label>Is package available in MD Parts menu?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_package_qualified__c</fullName>
        <inlineHelpText>Is package qualified?</inlineHelpText>
        <label>Is package qualified?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_AO1_corner_cut__c</fullName>
        <inlineHelpText>Is the AO1 corner cut? required</inlineHelpText>
        <label>Is the AO1 corner cut?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_consigned_chip_carrier__c</fullName>
        <inlineHelpText>Is this a consigned chip carrier required</inlineHelpText>
        <label>Is this a consigned chip carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lam_FCA_attach_pads__c</fullName>
        <label>Lam FCA attach pads</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laminate_finishing_details__c</fullName>
        <inlineHelpText>Provide the Laminate finishing details</inlineHelpText>
        <label>Laminate finishing details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Laminate_layer_cross_section__c</fullName>
        <inlineHelpText>Select the Laminate layer cross-section</inlineHelpText>
        <label>Laminate layer cross-section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-4-1</fullName>
                </value>
                <value>
                    <fullName>2-2-2</fullName>
                </value>
                <value>
                    <fullName>2-6-2</fullName>
                </value>
                <value>
                    <fullName>3-6-3</fullName>
                </value>
                <value>
                    <fullName>3-2-3</fullName>
                </value>
                <value>
                    <fullName>4-2-4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Layer_Quantity_1__c</fullName>
        <inlineHelpText>Provide the Layer Quantity {1} details</inlineHelpText>
        <label>Layer Quantity {1}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Layer_Quantity_2__c</fullName>
        <inlineHelpText>Provide the Layer Quantity {2} details</inlineHelpText>
        <label>Layer Quantity {2}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Layer_Quantity_38_um__c</fullName>
        <inlineHelpText>Provide the Layer Quantity {38 um} details</inlineHelpText>
        <label>Layer Quantity {38 um}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Layer_Quantity_50_um__c</fullName>
        <inlineHelpText>Provide the Layer Quantity {50 um} details</inlineHelpText>
        <label>Layer Quantity {50 um}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Layer_Quantity_66_um__c</fullName>
        <inlineHelpText>Provide the Layer Quantity {66 um} details</inlineHelpText>
        <label>Layer Quantity {66 um}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lid_Description__c</fullName>
        <inlineHelpText>Lid Description: (lid body size, thickness, sealband, forced or free process etc.)</inlineHelpText>
        <label>Lid Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lid_type__c</fullName>
        <label>Lid type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Spacing_um_1__c</fullName>
        <inlineHelpText>Provide the Line Spacing (um) {1} details</inlineHelpText>
        <label>Line Spacing (um) {1}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Spacing_um_2__c</fullName>
        <inlineHelpText>Provide the Line Spacing (um) {2} details</inlineHelpText>
        <label>Line Spacing (um) {2}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Spacing_um_38_um__c</fullName>
        <inlineHelpText>Provide the Line Spacing (um) {38 um} details</inlineHelpText>
        <label>Line Spacing (um) {38 um}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Spacing_um_50_um__c</fullName>
        <inlineHelpText>Provide the Line Spacing (um) {50 um} details</inlineHelpText>
        <label>Line Spacing (um) {50 um}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Spacing_um_66_um__c</fullName>
        <inlineHelpText>Provide the Line Spacing (um) {66 um} details</inlineHelpText>
        <label>Line Spacing (um) {66 um}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Linewidth_um_1__c</fullName>
        <inlineHelpText>Enter the Linewidth (um) {1}</inlineHelpText>
        <label>Linewidth (um) {1}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Linewidth_um_2__c</fullName>
        <inlineHelpText>Enter the Linewidth (um) {2}</inlineHelpText>
        <label>Linewidth (um) {2}</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Low_alpha_overmold__c</fullName>
        <inlineHelpText>Low-alpha overmold required</inlineHelpText>
        <label>Low-alpha overmold</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MLC_BSM_I_O_type__c</fullName>
        <inlineHelpText>Select the MLC BSM I/O type</inlineHelpText>
        <label>MLC BSM I/O type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BGA</fullName>
                </value>
                <value>
                    <fullName>CGA</fullName>
                </value>
                <value>
                    <fullName>CuCGA</fullName>
                </value>
                <value>
                    <fullName>DGA (protos only)</fullName>
                </value>
                <value>
                    <fullName>LGA or SacBGA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MLC_BSM_camber_spec_standard_or_specifi__c</fullName>
        <inlineHelpText>Enter the MLC BSM camber spec (standard or specifi details</inlineHelpText>
        <label>MLC BSM camber spec (standard or specifi</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MLC_C4_distortion_spec_standard_or_spec__c</fullName>
        <inlineHelpText>MLC C4 distortion spec (standard or spec )  details</inlineHelpText>
        <label>MLC C4 distortion spec (standard or spec</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MLC_I_O_pad_distortion_spec_um__c</fullName>
        <inlineHelpText>Enter the MLC I/O pad distortion spec (um) details</inlineHelpText>
        <label>MLC I/O pad distortion spec (um)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MLC_greensheet_size_mm__c</fullName>
        <inlineHelpText>Provide the MLC greensheet size (mm) details</inlineHelpText>
        <label>MLC greensheet size (mm)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MLC_quantity_of_layers_with_0_11mm_fir__c</fullName>
        <inlineHelpText>Provide the MLC - quantity of layers with 0.11mm fir details</inlineHelpText>
        <label>MLC - quantity of layers with 0.11mm fir</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MLC_quantity_of_layers_with_0_15mm_fir__c</fullName>
        <inlineHelpText>Provide the MLC - quantity of layers with 0.15mm fir details</inlineHelpText>
        <label>MLC - quantity of layers with 0.15mm fir</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MLC_quantity_of_layers_with_0_20mm_fir__c</fullName>
        <inlineHelpText>Provide the MLC - quantity of layers with 0.20mm fir details</inlineHelpText>
        <label>MLC - quantity of layers with 0.20mm fir</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturing_laminate__c</fullName>
        <label>Manufacturing laminate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_wirebond_wire_length_mm__c</fullName>
        <inlineHelpText>Provide the Maximum wirebond wire length (mm) details</inlineHelpText>
        <label>Maximum wirebond wire length (mm)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_wirebond_pad_space_on_package_m__c</fullName>
        <inlineHelpText>Provide the Minimum wirebond pad space on package (m</inlineHelpText>
        <label>Minimum wirebond pad space on package (m</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_wirebond_wire_diameter_mm__c</fullName>
        <inlineHelpText>Provide the Minimum wirebond wire diameter (mm)  details</inlineHelpText>
        <label>Minimum wirebond wire diameter (mm)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Module_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Data</label>
        <referenceTo>Module_Data__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_chip_sites_on_substrate_chip_c__c</fullName>
        <inlineHelpText>Provide the Number of chip sites on substrate/chip c details</inlineHelpText>
        <label>Number of chip sites on substrate/chip c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_stacked_vias__c</fullName>
        <inlineHelpText>Provide the Number of stacked vias details</inlineHelpText>
        <label>Number of stacked vias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_wirebond_pads_on_the_package__c</fullName>
        <inlineHelpText>Number of wirebond pads on the package</inlineHelpText>
        <label>Number of wirebond pads on the package</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Mod_Tech_PN__c</fullName>
        <inlineHelpText>Provide the Package (Mod Tech) PN details</inlineHelpText>
        <label>Package (Mod Tech) PN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_design_location__c</fullName>
        <label>Package design location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_details__c</fullName>
        <inlineHelpText>Provide the Package details</inlineHelpText>
        <label>Package details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_lead_pitch__c</fullName>
        <inlineHelpText>Provide the Package lead pitch details</inlineHelpText>
        <label>Package lead pitch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_offering_type__c</fullName>
        <inlineHelpText>Enter the Package offering type</inlineHelpText>
        <label>Package offering type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_qualification_review__c</fullName>
        <label>Package qualification review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_size_X_mm__c</fullName>
        <inlineHelpText>Provide the Package size - X (mm) details</inlineHelpText>
        <label>Package size - X (mm)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_size_Y_mm__c</fullName>
        <inlineHelpText>Provide the Package size - Y (mm) details</inlineHelpText>
        <label>Package size - Y (mm)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_style__c</fullName>
        <inlineHelpText>Package style details</inlineHelpText>
        <label>Package style</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_total_lead_count__c</fullName>
        <inlineHelpText>Count of Package total lead</inlineHelpText>
        <label>Package total lead count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_type__c</fullName>
        <label>Package type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particle_emission_rate__c</fullName>
        <inlineHelpText>C4 solder name/alloy PN/particle emission rate – particle emission rate</inlineHelpText>
        <label>Particle emission rate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pitch_of_WB_pads_on_the_package_mm__c</fullName>
        <inlineHelpText>Provide the Pitch of WB pads on the package (mm) details</inlineHelpText>
        <label>Pitch of WB pads on the package (mm)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_being_package_Tuc_C__c</fullName>
        <inlineHelpText>Reason for being package Tuc C &amp; Package Qual Description</inlineHelpText>
        <label>Reason for being package Tuc C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revisit_IP_request_if_any__c</fullName>
        <label>Revisit IP request # if any</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_format__c</fullName>
        <inlineHelpText>Select the Ship format</inlineHelpText>
        <label>Ship format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tape and Reel</fullName>
                </value>
                <value>
                    <fullName>Tray</fullName>
                </value>
                <value>
                    <fullName>Tube</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TSM_surface_finish_for_decaps__c</fullName>
        <label>TSM surface finish for decaps</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TSM_surface_finish_for_interposer__c</fullName>
        <label>TSM surface finish for interposer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Requirement__c</fullName>
        <label>Option</label>
        <referenceTo>Customer_Requirement__c</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_description_of_package__c</fullName>
        <inlineHelpText>Provide the User description of package deatils</inlineHelpText>
        <label>User description of package</label>
        <type>TextArea</type>
    </fields>
    <label>Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAK{00000}</displayFormat>
        <label>Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>